# crm

./: .gitignore  dump.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/: session.json
apps/erp/: .mcp.json  Bugs_Exam.md  DESIGN.md  ExamsModule.md  PERMISSIONS.md  READMD.md  SKILL.md  academic_session_architecture_report.md  architecture_analysis_frontend  architecture_readiness_analysis_exams  audit_logging_implementation_plan.md  backend_analysis.md  bomb.html  check.js  current_pos  current_problems  data_table_developer_guide.md  debug.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  implementation_plan_normlize  integration_architecture_report.md  interfaces.txt  logs.txt  middleware.ts  neondb_dump.dump  next.config.ts  package.json  s.ts  (+7 more)
apps/labsense-agent/: Cargo.toml  config.json  implementation_plan.md  labsense_report.md  scratch.rs  scratch2.rs  scratch3.rs  walkthrough.md
apps/labsense-agent/docs/: ARCHITECURE.md  CREDINTIALS.md  DEPLOYMENT.md  DETECTION.md  NEW_FEATURES.md  PRD.md  SKILL.md  TESTING_QUICKSTART.md
apps/labsense-agent/src/: analytics.rs  api_client.rs  config.rs  crypto.rs  hardware.rs  main.rs  monitor_loop.rs  public_key.pem  service.rs  session.rs  sync_loop.rs
apps/labsense-agent/src/monitor/: foreground.rs  idle.rs  mod.rs  normalizer.rs  uia.rs
apps/labsense-agent/src/web_ui/: mod.rs  routes.rs
apps/labsense-agent/src/web_ui/static/: app.js  index.html  style.css
docs/: erp_feature_consolidation_analysis.md  integration_architecture_report.md  monolith_migration_risk_analysis.md  payload.json
(+557 files in other folders)
