[package]
name = "labsense-agent"
version = "0.1.0"
edition = "2021"
description = "LabSense Institutional Analytics Agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
machine-uid = "0.5"
hostname = "0.4"
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
] }
sysinfo = "0.32"
windows-service = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
open = "5"

[[bin]]
name = "labsense-agent"
path = "src/main.rs"
